# wCCD-smart-contract

./: .gitignore  Cargo.toml  README.MD  initialize_param.json
src/: lib.rs
