[package]
name = "cis2_wccd"
version = "0.1.0"
edition = "2022"
license = "MPL-2.0"
authors = [ "CryptoSnowPrince <topdirector2017@gmail.com>" ]
description = "cis2_wccd smart contract"

[features]
default = ["std", "crypto-primitives"]
crypto-primitives = ["concordium-std/crypto-primitives"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = "5.0.0"
concordium-cis2 = "2.0.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1